# flash95

./: .gitignore  .gitmodules  COMPILING.md  README.md  build.bat
.github/workflows/: .ci.yml.swp  ci.yml  mirror.yml
patches/: Manually patching.md  README.md  flash10r12_36.bdf  flash9r277.bdf  flash9r289.bdf
wrappers/: CMakeLists.txt  README.md  advapi32.c  comdlg32.c  corkel32.def  cornt.def  corshel.def  corusr.def  crypt32.c  crypt32.def  iphlpapi.c  iphlpapi.def  kernel32.c  mscms.c  ntdll.c  shell32.c  urlmon.c  user32.c  ws2_32.c  ws2_32.def
